# scad-mlir-backend

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  add_c.s  add_scad.s  clang-format.txt  format.sh  make.sh  run.sh  scadc.cpp  simd.scad  test.scad
include/: CMakeLists.txt  Dialect.h  Ops.td  ShapeInferenceInterface.h  ShapeInferenceInterface.td  ast.h  mlir_generator.h  passes.h
src/: Dialect.cpp  ShapeInferenceInterface.cpp  affine_lowering.cpp  llvm_lowering.cpp  mlir_generator.cpp
tests/: Makefile  add_c.s  add_scad.s  basic_add.scad  simd.scad  testing  testing.c
tests/hosted/: advanced_matmul.c  advanced_matmul.scad  c_glue.h  simd.c  simd.scad
tests/standalone/: basic_add  basic_add.scad  basic_add.txt  fact.scad  fact.txt  fibonachi.scad  fibonachi.txt  for_counter.scad  for_counter.txt  simple_matmul.scad  simple_matmul.txt  unroll.scad  while_counter.scad  while_counter.txt
